Issue #2221209 by gitesh.koli, inertialacoustic | bunthorne: Status message overlaps icon.

--- a/core.css
+++ b/core.css
@@ -23,7 +23,7 @@ hr { display:none; }
 div.messages {
   color:#036;
   background-color:#f8f8f8;
-  padding:9px;
+  padding:9px 9px 9px 40px;
   border:1px solid #ccc;
   margin:0px 0px 10px;
   }
